--- a/index.html
+++ b/index.html
@@ -16,8 +16,67 @@
   
   </head>
 
-  <body>
-    <p>Cold-Related Illnesses</p>
-  </body>
+    <body class="bg">
+        <div class="container" style="margin-top: 100px">
+            <div class="row">
+                <div class="col-2">
+                    <div class="tab">
+                        <div class = topictab>
+                            <a href = "What_Is_Cold_Related_Illness.html">What is Cold Related Illness?</a>
+                        </div>
+                        <div class = topictab>
+                            <a href = "Who_Is_Affected.html">Who is Vulnerable To Cold Related Illness?</a>
+                        </div>
+                        <div class = topictab>
+                            <a href = "Preventing_Cold_Related_Illness.html">Preventing Cold Related Illness</a>
+                        </div>
+                        <div class = topictab>
+                            <a href = "Treating_Cold_Related_Illness.html">Treating Cold Related Illness</a>
+                        </div>
+                        <div class = topictab>
+                            <a href = "bibliography.html">Bibliography</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-9 text">
+                    <h1 style="margin-bottom: 20px">
+                        What is Cold Related Illness?
+                    </h1>
+                    <p style="font-size: 0.85rem; font-style: italic; float:right; margin-top: 60px">
+                        <img width="350" height="250"style="display: block;" src="https://live.staticflickr.com/3457/3247482606_958975d4a5_b.jpg" alt="Snow">
+                        <a href="https://www.flickr.com/photos/77614585@N00/3247482606">"Snow"</a>
+                        <span> by 
+                            <a href="https://www.flickr.com/photos/77614585@N00">Marc Davison</a>
+                        </span> is licensed under 
+                        <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html">CC BY-NC-SA 2.0</a>
+                    </p>
+                    <p class="paragraph">
+                        Cold related illnesses are very deadly, as prolonged exposure to cold could lead to hypothermia or even frostbite. 
+                    </p>
+                    
+                    <h3 class="subheader">
+                        Hypothermia
+                    </h3>
+
+                    <p class="paragraph">
+                        Hypothermia occurs once your body's temperature has crossed a certain threshold. Low body temperature affects the victim's brain, 
+                        preventing them from thinking clearly. Hypothermia is especially dangerous because the victim could be unaware that they have been afflicted.
+                        Some symptoms include shivering, exhaustion, confusion, fumbling hands, memory loss, slurred speech, and drowsiness.
+                    </p>
+
+                    <h3 class="subheader">
+                        Frostbite
+                    </h3>
+
+                    <p class="paragraph">
+                        Frostbite is damage to your body tissue from the extreme cold. There will be a loss of feeling and color in affected areas. The most susceptible body parts are the ones
+                        furthest away from your center, including the nose, fingers, toes, ears, and chin. Frostbite can lead to permanent damage to your body, which could also
+                        include amputation. Symptoms of frostbite include redness/pain on any skin area, white or grayish-yellow colored-skin, numbness, or unusually firm skin.
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </body>
 
 </html>
